# gchat-history-dumper

./: README.md  pyproject.toml
src/gchat_dumper/: chat_client.py  checkpoint.py  cli.py  dumper.py  utils.py
tests/: test_smoke.py
