[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gchat-history-dumper"
version = "0.1.0"
description = "CLI tool to export Google Chat messages from spaces visible to a Chat app."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "YOUR NAME", email = "you@example.com" }
]
keywords = ["google", "chat", "export", "history", "backup"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities"
]

dependencies = [
  "google-api-python-client>=2.0.0",
  "google-auth>=2.0.0",
  "google-auth-httplib2>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB/gchat-history-dumper"
Repository = "https://github.com/YOUR_GITHUB/gchat-history-dumper"

[project.scripts]
gchat-dump = "gchat_dumper.cli:main"
